# elastic

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  elastic.sln  rustfmt.toml
benches/elastic/: Cargo.toml
benches/elastic/src/: main.rs
benches/elastic_async/: Cargo.toml
benches/elastic_async/src/: main.rs
benches/elastic_bulk/: Cargo.toml
benches/elastic_bulk/src/: main.rs
benches/elastic_raw/: Cargo.toml
benches/elastic_raw/src/: main.rs
benches/rs-es/: Cargo.toml
benches/rs-es/src/: main.rs
derive/: Cargo.toml
derive/src/: lib.rs
dev/es_benches_rust/: Cargo.toml  README.md
dev/es_benches_rust/benches/: hyper.rs  mod.rs  rotor.rs  rses.rs
dev/es_benches_rust/src/: main.rs
elastic/: Cargo.toml  elastic.rsproj  errors  fail
elastic/examples/: async_bulk.rs  basic.rs  basic_async.rs  bulk.rs  bulk_async.rs  custom_response.rs  get.rs  index.rs  ping.rs  raw.rs  typed.rs  typed_async.rs
elastic/examples/account_sample/: Cargo.toml  README.md
elastic/examples/async_sample/: .gitignore  Cargo.toml  README.md
elastic/src/: client.rs  error.rs  impls.rs  lib.rs  types.rs
elastic/src/client/: async.rs  mod.rs  sync.rs
elastic/tests/: mod.rs
examples/account_sample/: Cargo.toml  README.md
examples/account_sample/src/: bulk.rs  main.rs
examples/async/: Cargo.toml
examples/async/src/: main.rs
examples/async_raw_sample/: Cargo.toml
examples/async_raw_sample/src/: hyper_req.rs  main.rs
examples/typed/: Cargo.toml
examples/typed/src/: data.rs  main.rs
hyper/: Cargo.toml  README.md  elastic_hyper.rsproj
hyper/benches/: mod.rs
hyper/codegen/: Cargo.toml  README.md
hyper/codegen/src/: main.rs
hyper/genned/bulk/: mod.rs
hyper/genned/cat/: aliases.rs  allocation.rs  count.rs  fielddata.rs  health.rs  help.rs  indices.rs  master.rs  nodeattrs.rs  nodes.rs  pending_tasks.rs  plugins.rs  recovery.rs  repositories.rs  segments.rs  shards.rs  snapshots.rs  thread_pool.rs
hyper/genned/clear_scroll/: mod.rs
hyper/genned/cluster/: get_settings.rs  health.rs  pending_tasks.rs  put_settings.rs  reroute.rs  state.rs  stats.rs
hyper/genned/count/: mod.rs
hyper/genned/count_percolate/: mod.rs
hyper/genned/delete/: mod.rs
hyper/genned/delete_script/: mod.rs
hyper/genned/delete_template/: mod.rs
hyper/genned/exists/: mod.rs
hyper/genned/explain/: mod.rs
hyper/genned/field_stats/: mod.rs
hyper/genned/get/: mod.rs
hyper/genned/get_script/: mod.rs
hyper/genned/get_source/: mod.rs
hyper/genned/get_template/: mod.rs
hyper/genned/index/: mod.rs
hyper/genned/indices/: analyze.rs  clear_cache.rs  close.rs  create.rs  delete.rs  delete_alias.rs  delete_template.rs  delete_warmer.rs  exists.rs  exists_alias.rs  exists_template.rs  exists_type.rs  flush.rs  flush_synced.rs  forcemerge.rs  get.rs  get_alias.rs  get_aliases.rs  get_field_mapping.rs  get_mapping.rs  get_settings.rs  get_template.rs  get_upgrade.rs  get_warmer.rs  open.rs  put_alias.rs  put_mapping.rs  put_settings.rs  put_template.rs  put_warmer.rs  recovery.rs  refresh.rs  segments.rs  shard_stores.rs  stats.rs  update_aliases.rs  upgrade.rs  validate_query.rs
hyper/genned/info/: mod.rs
hyper/genned/mget/: mod.rs
hyper/genned/mpercolate/: mod.rs
hyper/genned/msearch/: mod.rs
hyper/genned/mtermvectors/: mod.rs
hyper/genned/nodes/: hot_threads.rs  info.rs  stats.rs
hyper/genned/percolate/: mod.rs
hyper/genned/ping/: mod.rs
hyper/genned/put_script/: mod.rs
hyper/genned/put_template/: mod.rs
hyper/genned/render_search_template/: mod.rs
hyper/genned/scroll/: mod.rs
hyper/genned/search/: mod.rs
hyper/genned/search_shards/: mod.rs
hyper/genned/search_template/: mod.rs
hyper/genned/snapshot/: create.rs  create_repository.rs  delete.rs  delete_repository.rs  get.rs  get_repository.rs  restore.rs  status.rs  verify_repository.rs
hyper/genned/suggest/: mod.rs
hyper/genned/termvectors/: mod.rs
hyper/genned/update/: mod.rs
hyper/samples/: Cargo.toml
hyper/samples/src/: main.rs
hyper/samples/typed/: Cargo.toml
hyper/src/: lib.rs  lib.rs.bk  main.rs
hyper/src/api/: mod.rs
hyper/src/genned/: mod.rs
hyper/tests/: mod.rs
macros/: Cargo.toml  README.md
macros/benches/: mod.rs
macros/date/: Cargo.toml
macros/date/src/: lib.rs  lib.rs.in  parse.rs
macros/date/tests/: mod.rs
macros/json_str/: Cargo.toml
macros/json_str/benches/: mod.rs
macros/json_str/src/: lib.rs  lib.rs.in  macros.rs  parse.rs
macros/json_str/tests/: mod.rs
macros/src/: date.rs  date_format.rs  json.rs  lib.rs  parsers.rs
macros/src/types/: date_format.rs  mod.rs  object.rs  ty.rs  user_type.rs
macros/tests/: date.rs  date_format.rs  json.rs  mod.rs
macros/tests/types/: date_format.rs  mod.rs
macros/types/: Cargo.toml
macros/types/src/: lib.rs  object.rs
reqwest/: .gitignore  Cargo.toml  rustfmt.toml
reqwest/examples/: README.md  basic_async.rs  bulk_sync.rs
responses/: .gitignore  .travis.yml  Cargo.toml
responses/src/: bulk.rs  command.rs  common.rs  error.rs  get.rs  lib.rs  parsing.rs  ping.rs  search.rs  search_response.rs
responses/tests/: mod.rs
rotor/: Cargo.toml
rotor/src/: fsm.rs  lib.rs  main.rs
samples/basic/: Cargo.toml
samples/typed/: Cargo.toml
src/elastic/: Cargo.toml  README.md
src/elastic_derive/: Cargo.toml
src/queries/: Cargo.toml
types/: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  elastic_types.rsproj
types-derive/: .gitignore  Cargo.toml
types-derive-internals/: Cargo.toml
types-derive-internals/src/: lib.rs
types-derive-internals/tests/: mod.rs
types-derive/src/: lib.rs
types/benches/: date.rs  date_format.rs  mod.rs  string_format.rs  ty.rs
types/src/: date.rs  derive.rs  lib.rs  lib.rs.in  macros.rs  mappers.rs  mapping.rs  object.rs  string.rs  user_type.rs
types/tests/: date.rs  date_format.rs  date_mapping.rs  field_mapping.rs  mapping.rs  mod.rs  string.rs  string_mapping.rs  type_mapping.rs
types/types/: Cargo.toml
types/types-derive/: Cargo.toml
types/types-derive-internals/: Cargo.toml
(+1153 files in other folders)
