[package]
name = "elastic_reqwest"
version = "0.9.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>", "Stephan Buys <stephan.buys@gmail.com>"]
license = "Apache-2.0"
description = "A lightweight implementation of the Elasticsearch API based on reqwest."
documentation = "https://docs.rs/elastic_reqwest/"
repository = "https://github.com/elastic-rs/elastic-reqwest"
exclude = [ "samples" ]

[features]
nightly = []

[dependencies]
serde = "~1"
elastic_requests = "~0.4.1"
elastic_responses = "~0.9.0"
reqwest = { version = "*", git = "https://github.com/seanmonstar/reqwest.git", features = ["unstable"] }
url = "~1"
bytes = "*"
futures = "*"

[dev-dependencies]
json_str = "^0.*"
tokio-core = "*"