[package]
name = "elastic_derive"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]

[lib]
name = "elastic_derive"
proc-macro = true

[dependencies]
elastic_types_derive_internals = { version = "*", path = "../../elastic-types/types-derive-internals" }
syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
quote = "~0.3.0"
