[package]
name = "elastic_derive"
version = "0.13.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "Compile-time code generation for Elasticsearch type implementations."
repository = "https://github.com/elastic-rs/elastic"

[lib]
name = "elastic_derive"
proc-macro = true

[dependencies]
elastic_types_derive_internals = "~0.18.0"
syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
quote = "~0.3.0"
