[package]
name = "elastic"
version = "0.13.1"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
keywords = ["elasticsearch", "search"]
description = "A modular client for the Elasticsearch REST API."
documentation = "https://docs.rs/elastic/"
repository = "https://github.com/elastic-rs/elastic"

[badges]
travis-ci = { repository = "elastic-rs/elastic" }
appveyor = { repository = "elastic-rs/elastic" }

[features]
nightly = ["elastic_reqwest/nightly"]

[dependencies]
error-chain = "~0.9.0"
serde = "~1"
serde_json = "~1"
reqwest = { version = "*", git = "https://github.com/KodrAus/reqwest.git", branch = "feat/async-decoder", features = ["unstable"] }

elastic_reqwest = { version = "*", path = "../../elastic-hyper" }
elastic_types = "~0.19.0"

[dev-dependencies]
json_str = "^0.*"
serde_derive = "~1"
elastic_derive = { version = "~0.14.0", path = "../derive" }