[package]
name = "elastic"
version = "0.13.3"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
keywords = ["elasticsearch", "search"]
description = "A modular client for the Elasticsearch REST API."
documentation = "https://docs.rs/elastic/"
repository = "https://github.com/elastic-rs/elastic"

[badges]
travis-ci = { repository = "elastic-rs/elastic" }
appveyor = { repository = "elastic-rs/elastic" }

[features]
nightly = ["elastic_reqwest/nightly"]

[dependencies]
log = "~0.3.8"
uuid = { version = "~0.5.1", features = [ "v4" ] }
error-chain = "~0.9.0"
serde = "~1"
serde_json = "~1"
reqwest = "~0.6.0"

elastic_reqwest = "~0.8.0"
elastic_types = "~0.18.0"

[dev-dependencies]
env_logger = "~0.4.3"
json_str = "^0.*"
serde_derive = "~1"
elastic_derive = "~0.13.3"