[package]
name = "elastic"
version = "0.13.1"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
keywords = ["elasticsearch", "search"]
description = "A modular client for the Elasticsearch REST API."
documentation = "https://docs.rs/elastic/"
repository = "https://github.com/elastic-rs/elastic"

[badges]
travis-ci = { repository = "elastic-rs/elastic" }
appveyor = { repository = "elastic-rs/elastic" }

[features]
nightly = ["elastic_reqwest/nightly"]

[dependencies]
error-chain = "0.11.0-rc.2"
serde = "~1"
serde_json = "~1"
reqwest = { version = "*", git = "https://github.com/KodrAus/reqwest.git", branch = "feat/async-decoder", features = ["unstable"] }
futures = "*"
tokio-core = "*"
tokio-io = "*"
futures-cpupool = "*"

elastic_reqwest = { version = "*", git = "https://github.com/elastic-rs/elastic-reqwest.git", branch = "feat/async" }
elastic_types = "~0.19.0"

[dev-dependencies]
serde_derive = "~1"
elastic_derive = { version = "~0.14.0", path = "../derive" }
