[package]
name = "elastic_hyper"
version = "0.2.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "A lightweight implementation of the Elasticsearch API based on Hyper."
documentation = "http://kodraus.github.io/rustdoc/elastic_hyper/"
repository = "https://github.com/KodrAus/elasticsearch-rs"
exclude = [ "samples", "codegen" ]

[features]
test-integration = [ "json_str", "serde", "serde_macros", "serde_json" ]

[dependencies]
hyper = "~0.8.0"
serde = { version = "~0.7.0", optional = true }
serde_macros = { version = "~0.7.0", optional = true }
serde_json = { version = "~0.7.0", optional = true }
json_str = { version = "~0.2.0", optional = true }
url = "~0.5.7"
