[package]
name = "elastic_hyper"
version = "0.2.1"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "A lightweight implementation of the Elasticsearch API based on Hyper."
documentation = "http://kodraus.github.io/rustdoc/elastic_hyper/"
repository = "https://github.com/KodrAus/elasticsearch-rs"
exclude = [ "samples", "codegen" ]

[features]
nightly-testing = [ "clippy" ]

[dependencies]
hyper = "~0.9.0"
url = "~1.1.0"
clippy = { version = "^0.*", optional = true }
