[package]
name = "elastic_hyper"
version = "0.3.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "A lightweight implementation of the Elasticsearch API based on Hyper."
documentation = "http://kodraus.github.io/rustdoc/elastic_hyper/"
repository = "https://github.com/KodrAus/elasticsearch-rs"
exclude = [ "samples", "codegen" ]

[features]
default = [ "ssl" ]
ssl = [ "hyper/ssl" ]
nightly-testing = [ "clippy" ]

[dependencies]
hyper = { version = "~0.9.0", default-features = false }
url = "~1.1.0"
clippy = { version = "^0.*", optional = true }

[dev-dependencies]
json_str = "^0.*"
