[package]
name = "elastic_macros"
version = "0.1.3"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "Compile-time code generation for Elasticsearch type implementations."
documentation = "http://kodraus.github.io/rustdoc/elastic_macros/"
repository = "https://github.com/KodrAus/elasticsearch-rs"

[lib]
name = "elastic_macros"
crate_type = ["dylib"]
plugin = true

[features]
types = [ "chrono" ]
nightly-testing = [ "clippy" ]

[dependencies]
chrono = { version = "~0.2.20", optional = true }
serde = "~0.7.0"
serde_json = "~0.7.0"
serde_macros = "~0.7.0"
clippy = { version = "^0.*", optional = true }

[dependencies.json_macros]
version = "^0.3"
default-features = false
features = ["with-serde"]