[package]
name = "elastic_rotor"
version = "0.0.1"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]

[profile.release]
debug = true

[dependencies]
url = "*"
rotor = "*"
futures = "*"
rotor-http = { version = "*", git = "https://github.com/KodrAus/rotor-http" }
rotor-tools = "*"
lazy_static = "*"
crossbeam = "*"

time = "*"
stopwatch = "*"