[package]
name = "types_derive_internals"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]

[dependencies]
serde = "~0.9.0"
serde_json = "~0.9.0"
syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
quote = "~0.3.0"
serde_codegen_internals = { version = "~0.12.0", default-features = false }
