[package]
name = "elastic_types_derive_internals"
version = "0.3.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "Codegen internals for elastic_types."
repository = "https://github.com/elastic-rs/elastic-types"

[dependencies]
serde = "~0.9.0"
serde_json = "~0.9.0"
syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
quote = "~0.3.0"
serde_codegen_internals = { version = "~0.12.0", default-features = false }
quick-error = "~1"
nom = "~2"
chrono = { version = "~0.3.0", features = [ "serde" ]}