[package]
name = "elastic_types"
version = "0.18.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "A strongly-typed implementation of Elasticsearch core types and Mapping API."
documentation = "https://docs.rs/elastic_types/*/elastic_types/"
repository = "https://github.com/elastic-rs/elastic-types"

[dependencies]
serde = "~1"
serde_json = "~1"
chrono = { version = "~0.4.0", features = [ "serde" ]}
geo = "~0.4.0"
geohash = "~0.4.0"
geojson = "~0.8.0"
serde_derive = "~1"
elastic_types_derive = "~0.18.0"

[dev-dependencies]
json_str = "^0.*"
