[package]
name = "elastic_async_bench"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]

[dependencies]
elastic = { version = "*", path = "../../src/elastic", features = ["nightly"] }
elastic_derive = { version = "*", path = "../../src/elastic_derive" }
tokio = "*"
futures = "~0.1.16"
serde = "*"
serde_derive = "*"
json_str = { version = "*", features = ["nightly"]}

measure = { version = "*", path = "../measure" }
