[package]
name = "elastic_bench_bulk"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false

[features]
default = ["profile_memory","gzip"]
profile_memory = []
errors_only = []
gzip = []

[dependencies]
elastic = { version = "*", path = "../../src/elastic" }
reqwest = { version = "~0.8.0", features = ["unstable"] }
string_cache = { version = "*", optional = true }
inlinable_string = { version = "*", features = ["serde"], optional = true }
lazy_static = { version = "*" }

measure = { version = "*", path = "../measure" }
