[package]
name = "elastic_bench_raw"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false

[dependencies]
elastic = { version = "*", path = "../../src/elastic" }
json_str = { version = "*", features = ["nightly"]}

measure = { version = "*", path = "../measure" }
