[package]
name = "rs-es_bench"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false

[features]
ssl = ["rs-es/ssl"]

[dependencies]
serde = "~1"
serde_derive = "~1"
rs-es = { version = "*", default-features = false }

measure = { version = "*", path = "../measure" }
