[package]
name = "es_benches_rust"
version = "0.1.0"
authors = ["Ashley Mannix <Ashley.Mannix@sunshinecoast.qld.gov.au>"]

[dependencies]
serde = "*"
serde_json = "*"
serde_macros = "*"
hyper = "*"
time = "*"
rotor = "*"
rotor-http = { git = "https://github.com/tailhook/rotor-http.git" }
rs-es = "*"
elastic_types_codegen = { version = "*", path = "../../types_codegen" }