[package]
name = "account-sample"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]

[dependencies]
elastic = { version = "*", path = "../../src/elastic" }
elastic_derive = { version = "*", path = "../../src/elastic_derive" }

quick-error = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
