[package]
name = "account-sample"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false

[dependencies]
elastic = { version = "~0.21.0-pre.1", path = "../../src/elastic" }
elastic_derive = { version = "~0.21.0-pre.1", path = "../../src/elastic_derive" }

quick-error = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
