[package]
name = "account-sample"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false

[dependencies]
elastic = { version = "~0.21.0-pre.5", path = "../../src/elastic" }
elastic_derive = { version = "~0.21.0-pre.5", path = "../../src/elastic_derive" }

quick-error = "~1"
serde = "~1"
serde_json = "~1"
serde_derive = "~1"
