[package]
name = "async"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]

[dependencies]
elastic_requests = "*"
elastic_responses = "*"
elastic_types = "*"
elastic_types_derive = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"
json_str = "*"

tokio-core = "*"
futures = "*"

hyper = { git = "https://github.com/hyperium/hyper.git" }
futures-cpupool = "*"