[package]
name = "async-raw-sample"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]

[dependencies]
elastic_requests = "*"
elastic_responses = "*"

tokio-core = "*"
tokio-proto = "*"
futures = "*"
futures-cpupool = "*"
memmap = "*"
hyper = { git = "https://github.com/hyperium/hyper.git" }

quick-error = "*"

string_cache = "*"
