[package]
name = "async-raw-sample"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false

[dependencies]
elastic_requests = { version = "*", path = "../../src/requests" }
elastic_responses = { version = "*", path = "../../src/responses" }

tokio-core = "*"
tokio-proto = "*"
futures = "*"
futures-cpupool = "*"
memmap = "*"
hyper = { git = "https://github.com/hyperium/hyper.git" }

quick-error = "*"

string_cache = "*"
