[package]
name = "elastic_hyper_samples"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]

[dependencies]
hyper = "*"
elastic_hyper = { version = "*", path = "../../hyper" }
elastic_macros = { version = "*", path = "../../macros" }
serde = { version = "*" }
serde_macros = { version = "*" }
serde_json = { version = "*" }