[package]
name = "elastic_date_macros"
version = "0.5.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "Compile-time code generation for chrono date formats."
documentation = "https://elastic-rs.github.io/elastic_types/0.5/elastic_date_macros/"
repository = "https://github.com/elastic-rs/elastic-types"

[lib]
name = "elastic_date_macros"
crate_type = [ "dylib" ]
plugin = true

[features]
nightly = [ ]
nightly-testing = [ ]

[dependencies]
chrono = { version = "~0.2.20" }
