[package]
name = "json_str"
version = "0.2.2"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "Write json literals without ungainly strings."
documentation = "http://kodraus.github.io/rustdoc/json_str/"
repository = "https://github.com/KodrAus/elasticsearch-rs"

[lib]
name = "json_str"
crate_type = [ "dylib" ]
plugin = true

[features]
nightly-testing = [ "clippy" ]

[dependencies]
clippy = { version = "^0.*", optional = true }
