[package]
name = "elastic_types_derive"
version = "0.8.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "Compile-time code generation for Elasticsearch type implementations."
repository = "https://github.com/elastic-rs/elastic-types"

[lib]
name = "elastic_types_derive"
proc-macro = true

[features]
nightly-testing = [ ]

[dependencies]
serde = "~0.8.0"
serde_json = "~0.8.0"
syn = { version = "~0.9.0", features = ["aster", "visit", "parsing", "full"] }
quote = "~0.3.0"
serde_codegen_internals = { version = "~0.10.0", default-features = false }
