[package]
name = "elastic_types_derive"
version = "0.11.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "Compile-time code generation for Elasticsearch type implementations."
repository = "https://github.com/elastic-rs/elastic-types"

[lib]
name = "elastic_types_derive"
proc-macro = true

[features]
elastic = [ ]
nightly-testing = [ ]

[dependencies]
serde = "~0.9.0"
serde_json = "~0.9.0"
syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
quote = "~0.3.0"
serde_codegen_internals = { version = "~0.11.0", default-features = false }
