[package]
name = "typed"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]

[dependencies]
elastic_reqwest = { version = "*", path = "../../" }
elastic_requests = "*"

reqwest = "~0.2.0"
serde = "~0.8.0"
serde_derive = "~0.8.0"
serde_json = "~0.8.0"
elastic_types = { version = "*", features = ["nightly"]}
elastic_types_derive = "*"

json_str = { version = "*", features = ["nightly"]}
