[package]
name = "elastic"
version = "0.21.0-pre.5"
edition = "2018"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "MIT/Apache-2.0"
keywords = ["elasticsearch", "search"]
description = "A modular sync and async client for the Elasticsearch REST API."
documentation = "https://docs.rs/elastic/"
repository = "https://github.com/elastic-rs/elastic"
readme = "../../README.md"

[badges]
travis-ci = { repository = "elastic-rs/elastic" }
appveyor = { repository = "elastic-rs/elastic" }

[features]

default = ["sync_sender", "async_sender"]

sync_sender = ["reqwest"]
async_sender = ["reqwest", "futures", "tokio", "tokio-threadpool"]

rustls-tls = [
    "reqwest/rustls-tls"
]

default-tls = [
    "reqwest/default-tls"
]

[dependencies]
elastic_derive = { version = "~0.21.0-pre.5", path = "../elastic_derive" }

quick-error = "~1"
error-chain = "~0.11"
log = "~0.4"
uuid = { version = "~0.7", features = [ "v4" ] }
url = "~1"
bytes = "~0.4"
http = "~0.1"
serde = "~1"
serde_json = "~1"
serde_derive = "~1"
reqwest = { version = "~0.9", optional = true, default-features = false }
futures = { version = "~0.1", optional = true }
tokio = { version = "~0.1", optional = true }
tokio-threadpool = { version = "~0.1", optional = true }
fluent_builder = "~0.6"
crossbeam-channel = "~0.3"
chrono = { version = "~0.4.0", features = [ "serde" ]}
geo = "~0.12.0"
geohash = "~0.9.0"
geojson = "~0.16.0"

[dev-dependencies]
env_logger = "~0.6"
