[package]
name = "elastic_derive"
version = "0.21.0-pre.1"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "MIT/Apache-2.0"
description = "Compile-time code generation for Elasticsearch type implementations."
repository = "https://github.com/elastic-rs/elastic"

[lib]
name = "elastic_derive"
proc-macro = true

[dependencies]
elastic_types_derive_internals = { version = "~0.21.0-pre.1", path = "../types_derive_internals" }
syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
quote = "~0.3.0"
