[package]
name = "elastic_derive"
version = "0.21.0-pre.5"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "MIT/Apache-2.0"
description = "Compile-time code generation for Elasticsearch type implementations."
repository = "https://github.com/elastic-rs/elastic"

[lib]
name = "elastic_derive"
proc-macro = true

[dependencies]
serde = "~1"
serde_json = "~1"
syn = { version = "~0.11.0", features = ["aster", "visit", "parsing", "full"] }
quote = "~0.3.0"
serde_derive_internals = { version = "~0.15.0", default-features = false }
quick-error = "~1"
nom = "~3"
chrono = { version = "~0.4.0", features = [ "serde" ]}
